styles.css
body {
    background-color: whitesmoke;
    width: 100%;
}

.navbar {
    background-color: #2196F3;
    box-shadow: 0px 2px 8px 2px rgba(0, 0, 0, 0.19);
    border: 0px;
    padding: 0px 16px 0px 16px;
    height: 50px;
}

#subreddit(removethis) {
    background-color: #2196F3;
    border: solid 3px #2196F3;
    border-radius: 5px;
    transition: border 0.3s;
    color: white;
    transition: background-color 0.5s;
    text-transform: lowercase;
    letter-spacing: 2px;
    font-family: helvetica;
    padding-left: 8px;
    width: 100%;
    font-size: 20px;
    margin-top: 6px;
}

#rrr {
    font-size: 20px;
    color: white;
    letter-spacing: 3px;
    font-weight: bold;
    font-family: helvetica;
    position: relative;
    float: left;
    margin-top: 11px;
}

.hamburger {
    display: block;
    position: relative;
    overflow: hidden;
    margin: 0;
    padding: 0;
    width: 50px;
    height: 50px;
    float: left;
    font-size: 0;
    text-indent: -9999px;
    appearance: none;
    box-shadow: none;
    border-radius: none;
    border: none;
    cursor: pointer;
    transition: background 0.3s;
    background-color: transparent;
}

.hamburger:focus {
    outline: none;
}

.hamburger span {
    display: block;
    position: absolute;
    top: 24px;
    left: 14px;
    right: 14px;
    height: 2px;
    background: #fff;
}

.hamburger span::before,
.hamburger span::after {
    position: absolute;
    display: block;
    left: 0;
    width: 100%;
    height: 2px;
    background-color: #fff;
    content: "";
}

.hamburger span::before {
    top: -7px;
}

.hamburger span::after {
    bottom: -7px;
}

.hamburger--htla {
    background-color: transparent;
}

.hamburger--htla span {
    transition: transform 0.3s;
}

.hamburger--htla span::before {
    transform-origin: top right;
    transition: transform 0.3s, width 0.3s, top 0.3s;
}

.hamburger--htla span::after {
    transform-origin: bottom right;
    transition: transform 0.3s, width 0.3s, bottom 0.3s;
}


/* active state, i.e. menu open */

.hamburger--htla.is-active {
    background-color: transparent;
}

.hamburger--htla.is-active span {
    transform: rotate(180deg);
}

.hamburger--htla.is-active span::before,
.hamburger--htla.is-active span::after {
    width: 70%;
}

.hamburger--htla.is-active span::before {
    top: 0;
    transform: translateX(9px) translateY(1px) rotate(45deg);
}

.hamburger--htla.is-active span::after {
    bottom: 0;
    transform: translateX(9px) translateY(-1px) rotate(-45deg);
}

#rrr:hover {
    cursor: pointer;
}

#subreddit(removethis)::selection {
    background-color: white;
    color: black;
}

#subreddit(removethis):focus {
    background-color: #64B5F6;
}

#subreddit(removethis):hover {
    background-color: #64B5F6;
}

.card {
    background-color: white;
    box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.19);
    padding: 24px;
    margin-top: 6px;
    margin-bottom: 6px;
    border-radius: 2px;
}

.cardtitle {
    font-family: helvetica;
    margin: 0px;
    color: darkslategray;
    margin-bottom: 16px;
}

.link {
    color: darkslategrey;
}

.row {
    margin: 0px 0px;
}

.link:hover {
    color: dodgerblue;
    text-decoration: none;
}

.container {
    padding-bottom: 8px;
    padding-left: 16px;
    padding-right: 16px;
    margin-top: 66px;
    overflow-y: auto;
}

.score {
    color: green;
    display: inline;
    margin: 4px;
}

.sameline {
    display: inline;
}

.comments {
    color: #757575;
    display: inline;
    margin: 0px 4px;
}

.comments:hover {
    color: dodgerblue;
    cursor: pointer;
    text-decoration: none;
}

.thumby {
    width: 100px;
    height: 100px;
}

.thumb {
    display: inline-block;
    width: 200px;
    height: 200px;
    margin: 5px;
    border: 3px solid #c99;
    background-position: center center;
    background-size: cover;
}

#icon {
    color: white;
    float: left;
}

#search {
    overflow: hidden;
    height: 100%;
}

.slideout_panel {
    position: fixed;
    background-color: whitesmoke;
    transition: transform 0.3s;
    width: 100%;
    height: 100%;
    overflow-y: scroll;
    margin-top: 50px;
    box-shadow: 2px 4px 8px 2px rgba(0, 0, 0, 0);
}

.sublist_items {
    list-style: none;
    margin: 0;
    color: black;
    padding: 0px;
}

@media all and (min-width: 320px) {
    .slideout_panel {
        width: 300px;
    }
}

.slideout_panel .sublist_item {
    display: block;
    text-align: left;
    border-bottom: solid 1px rgba(0, 0, 0, 0.14);
    overflow: auto;
}

.slideout_panel .sublist_item:hover {
    display: block;
    text-align: left;
    border-bottom: solid 1px rgba(0, 0, 0, 0.14);
    background-color: white;
}

.slideout_panel .sublist_link {
    display: block;
    padding: 12px 24px;
    color: gray;
    margin-left: 1px;
    border: 0px;
    background-color: transparent;
    width: 100%;
    text-align: left;
    outline: none;
    overflow: auto;
}

.slideout_panel {
    top: 0;
    left: 0;
    transform: translateX(-100%);
}

@media all and (min-width: 320px) {
    .slideout_panel {
        transform: translateX(-300px);
    }
}

.slideout_panel.is-shown {
    transform: translateX(0px);
    box-shadow: 2px 4px 8px 2px rgba(0, 0, 0, 0.19);
}

.topitem {
    border-bottom: solid 1px rgba(0, 0, 0, 0.14);
}

.sub_search {
    display: block;
    color: gray;
    margin-right: -4px;
    padding: 12px;
    border: 0px;
    background-color: white;
    width: 264px;
    height: 50px;
    padding-left: 24px;
    text-align: left;
    outline: none;
    font-family: helvetica;
    letter-spacing: 1px;
    display: inline-block;
}

.search_button {
    display: inline-block;
    width: 36px;
    height: 50px;
    border: 0px;
    outline: none;
    background-color: white;
    color: gray;
    vertical-align: top;
}

#titleholder p {
    color: white;
    line-height: 50px;
    font-size: 20px;
    margin: 0px 70px;
}

.sub {
    color: #bdbdbd;
    display: inline;
    margin: 0px 4px;
    outline: 0px;
    border: 0px;
    background-color: transparent;
}

.sub:hover {
    color: dodgerblue;
    cursor: pointer;
    text-decoration: none;
}

#searchicon {
    width: 100%;
    background-color: transparent;
}

.listheader {
    position: absolute;
    z-index: 10;
}

